--- a/scss/3-modules/_responsive.scss
+++ b/scss/3-modules/_responsive.scss
@@ -2,7 +2,7 @@
 
 @media (max-width: 480px) {
   .main {
-    height: 100vh;
+    height: 100%;
     border-radius: 0;
   }
 }
